samples/_failures_safe/1761633087_a3205b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_38797d3b.c: In function ‘display_summary’:
./samples/SAFE/__tmp_38797d3b.c:138:12: error: missing terminating " character
  138 |     printf("\
      |            ^~
./samples/SAFE/__tmp_38797d3b.c:138:5: error: expected expression at end of input
  138 |     printf("\
      |     ^~~~~~
./samples/SAFE/__tmp_38797d3b.c:138:5: error: expected declaration or statement at end of input
